MFB51: Fixed bug #35427 (str_word_count() handles '-' incorrectly).